--- a/localisation/japanese/generic/geacps_parties_l_japanese.yml
+++ b/localisation/japanese/generic/geacps_parties_l_japanese.yml
@@ -91,6 +91,10 @@
  PARTY_busaid_house:0 "ブーサイード家"
  PARTY_busaid_house_long:0 "ブーサイード家"
  
+#PHI-フィリピン
+ PARTY_association_for_service_to_the_new_philippines:0 "カリバピ"
+ PARTY_association_for_service_to_the_new_philippines_long:0 "新生フィリピン奉仕団"
+ 
 #SAU-サウジアラビア
  PARTY_saud_house:0 "サウード家"
  PARTY_saud_house_long:0 "サウード家"
