--- a/localisation/japanese/countries_europe/geacps_CZE_l_japanese.yml
+++ b/localisation/japanese/countries_europe/geacps_CZE_l_japanese.yml
@@ -74,7 +74,7 @@
 
 #国民精神
  CZE_state_security:0 "StB"
- CZE_People's_Democracy_Manifesto:0 "人民民主主義宣言"
+ CZE_peoples_democracy_manifesto:0 "人民民主主義宣言"
 
 #ディシジョン
  
