国家タグの追加

--- a/localisation/japanese/map/geacps_countries_l_japanese.yml
+++ b/localisation/japanese/map/geacps_countries_l_japanese.yml
@@ -1674,6 +1674,18 @@
  ASH_DEF:0 "アシャンティ"
  ASH_ADJ:0 "アシャンティ"
  
+ AZA:0 "アザワド"
+ AZA_DEF:0 "アザワド"
+ AZA_ADJ:0 "アザワド"
+ 
+ BEN:0 "ベニン"
+ BEN_DEF:0 "ベニン"
+ BEN_ADJ:0 "ベニン"
+ 
+ BIA:0 "ビアフラ"
+ BIA_DEF:0 "ビアフラ"
+ BIA_ADJ:0 "ビアフラ"
+ 
  CEU:0 "セウタ"
  CEU_DEF:0 "セウタ"
  CEU_ADJ:0 "セウタ"
@@ -1714,9 +1726,9 @@
  LSO_DEF:0 "レソト"
  LSO_ADJ:0 "レソト"
  
- MLL:0 "メリリヤ"
- MLL_DEF:0 "メリリヤ"
- MLL_ADJ:0 "メリリヤ"
+ MLL:0 "メリリャ"
+ MLL_DEF:0 "メリリャ"
+ MLL_ADJ:0 "メリリャ"
  
  MUS:0 "モーリシャス"
  MUS_DEF:0 "モーリシャス"
@@ -1875,6 +1887,10 @@
  NFL_DEF:0 "ニューファンドランド"
  NFL_ADJ:0 "ニューファンドランド"
  
+ NVS:0 "ネイビス"
+ NVS_DEF:0 "ネイビス"
+ NVS_ADJ:0 "ネイビス"
+ 
  PCZ:0 "パナマ運河地帯"
  PCZ_DEF:0 "パナマ運河地帯"
  PCZ_ADJ:0 "パナマ運河地帯"
@@ -1910,6 +1926,10 @@
  STH:0 "セントヘレナ"
  STH_DEF:0 "セントヘレナ"
  STH_ADJ:0 "セントヘレナ"
+ 
+ STM:0 "セント・マーチン"
+ STM_DEF:0 "セント・マーチン"
+ STM_ADJ:0 "セント・マーチン"
  
  SVG:0 "セントビンセント及びグレナディーン"
  SVG_DEF:0 "セントビンセント及びグレナディーン"
