--- a/localisation/japanese/map/geacps_countries_long_l_japanese.yml
+++ b/localisation/japanese/map/geacps_countries_long_l_japanese.yml
@@ -2144,6 +2144,15 @@
  ASH_republic:0 "アシャンティ共和国"
  ASH_republic_DEF:0 "アシャンティ共和国"
  
+ AZA_state:0 "アザワド国"
+ AZA_state_DEF:0 "アザワド国"
+ 
+ BEN_republic:0 "ベニン共和国"
+ BEN_republic_DEF:0 "ベニン共和国"
+ 
+ BIA_republic:0 "ビアフラ共和国"
+ BIA_republic_DEF:0 "ビアフラ共和国"
+ 
  CEU_free_city:0 "自由都市セウタ"
  CEU_free_city_DEF:0 "自由都市セウタ"
  
@@ -2186,8 +2195,8 @@
  LSO_kingdom:0 "レソト王国"
  LSO_kingdom_DEF:0 "レソト王国"
  
- MLL_free_city:0 "自由都市メリリヤ"
- MLL_free_city_DEF:0 "自由都市メリリヤ"
+ MLL_free_city:0 "自由都市メリリャ"
+ MLL_free_city_DEF:0 "自由都市メリリャ"
  
  MUS_republic:0 "モーリシャス共和国"
  MUS_republic_DEF:0 "モーリシャス共和国"
@@ -2323,6 +2332,9 @@
  NFL_republic:0 "ニューファンドランド共和国"
  NFL_republic_DEF:0 "ニューファンドランド共和国"
  
+ NVS_republic:0 "ネイビス共和国"
+ NVS_republic_DEF:0 "ネイビス共和国"
+ 
  
  QEB_republic:0 "ケベック共和国"
  QEB_republic_DEF:0 "ケベック共和国"
@@ -2347,6 +2359,9 @@
  
  STH_republic:0 "セントヘレナ共和国"
  STH_republic_DEF:0 "セントヘレナ共和国"
+ 
+ STM_union:0 "セント・マーチン連合"
+ STM_union_DEF:0 "セント・マーチン連合"
  
  SVG_republic:0 "セントビンセント及びグレナディーン共和国"
  SVG_republic_DEF:0 "セントビンセント及びグレナディーン共和国"
