オランダのステート分割

--- a/localisation/japanese/map/geacps_state_names_l_japanese.yml
+++ b/localisation/japanese/map/geacps_state_names_l_japanese.yml
@@ -33,8 +33,8 @@
  STATE_32:0 "ローヌ＝アルプ"
  STATE_33:0 "シェール"
  STATE_34:0 "ワロン"
- STATE_35:0 "南オランダ"
- STATE_36:0 "北オランダ"
+ STATE_35:0 "ヘルダーラント"
+ STATE_36:0 "フリースラント"
  STATE_37:0 "シェラン"
  STATE_38:0 "ノールランド"
  STATE_39:0 "南チロル及び上アディジェ"
@@ -1131,8 +1131,8 @@
  STATE_1130:0 "ムーンラパモーク"
  STATE_1131:0 "ダルマチア南部"
  STATE_1132:0 "スラボニア中部"
- STATE_1133:0 "南ホラント"
- STATE_1134:0 "東オランダ"
+ STATE_1133:0 "ゼーラント"
+ STATE_1134:0 "ユトレヒト"
  STATE_1135:0 "ナンシー"
  STATE_1136:0 "グアンタナモ湾"
  STATE_1137:0 "ナンガルハール"
@@ -1473,3 +1473,8 @@
  STATE_1472:0 "ホーリンゴル"	#霍林郭勒
  STATE_1473:0 "ウランハダ"	#赤峰
  STATE_1474:0 "カザフ・アルタイ"
+ STATE_1475:0 "フローニンゲン"
+ STATE_1476:0 "ドレンテ"
+ STATE_1477:0 "オーファーアイセル"
+ STATE_1478:0 "北ブラバント"
+ STATE_1479:0 "リンブルフ北部"
