ネーデルラントの国家タグ追加

--- a/localisation/japanese/generic/geacps_characters_l_japanese.yml
+++ b/localisation/japanese/generic/geacps_characters_l_japanese.yml
@@ -405,15 +405,6 @@
  CHARACTER_georgios_tes_ellhadas:0 "ゲオルギオス・ティス・エラザス"
  CHARACTER_georgios_tes_ellhadas_desc:0 "ギリシャ王"
  
-#HOL-ホラント
- CHARACTER_wilhelmina:0 "ウィルヘルミナ"
- CHARACTER_wilhelmina_helena_pauline_maria_van_oranje-nassau:0 "ウィルヘルミナ・ヘレナ・パウリーナ・マリア・ファン・オラニエ＝ナッサウ"
- CHARACTER_wilhelmina_helena_pauline_maria_van_oranje-nassau_desc:0 "ネーデルラント女王"
- CHARACTER_johannes_cornelis_brons:0 "ヨハネス・コルネリス・ブロンス"
- CHARACTER_johannes_cornelis_brons_desc:0 "スリナム総督"
- CHARACTER_petrus_albertus_kasteel:0 "ペトリュス・アルバートゥス・カステール"
- CHARACTER_petrus_albertus_kasteel_desc:0 "キュラソー総督"
- 
 #HUN-ハンガリー
  CHARACTER_zoltan_tildy:0 "ティルディ・ゾルターン"
  CHARACTER_zoltan_tildy_desc:0 "ハンガリー大統領"
@@ -466,6 +457,15 @@
  CHARACTER_haakon_vii:0 "ホーコン7世"
  CHARACTER_haakon_ne_christian_frederik_carl_georg_valdemar_axel:0 "ホーコン、ネ・クリスチャン・フレゼリク・カール・ゲオルク・ヴァルデマー・アクセル"
  CHARACTER_haakon_ne_christian_frederik_carl_georg_valdemar_axel_desc:0 "ノルウェー王"
+ 
+#NTL-ネーデルラント
+ CHARACTER_wilhelmina:0 "ウィルヘルミナ"
+ CHARACTER_wilhelmina_helena_pauline_maria_van_oranje-nassau:0 "ウィルヘルミナ・ヘレナ・パウリーナ・マリア・ファン・オラニエ＝ナッサウ"
+ CHARACTER_wilhelmina_helena_pauline_maria_van_oranje-nassau_desc:0 "ネーデルラント女王"
+ CHARACTER_johannes_cornelis_brons:0 "ヨハネス・コルネリス・ブロンス"
+ CHARACTER_johannes_cornelis_brons_desc:0 "スリナム総督"
+ CHARACTER_petrus_albertus_kasteel:0 "ペトリュス・アルバートゥス・カステール"
+ CHARACTER_petrus_albertus_kasteel_desc:0 "キュラソー総督"
  
 #POL-ポーランド
  CHARACTER_boleslaw_bierut:0 "ボレスワフ・ビェルト"
