--- a/localisation/japanese/countries_new_continent/geacps_CHL_l_japanese.yml
+++ b/localisation/japanese/countries_new_continent/geacps_CHL_l_japanese.yml
@@ -1,24 +1,43 @@
 ﻿l_japanese:
 #国家方針
  CHL_september_election:0 "9月選挙"
+ CHL_september_election_desc:0 "TODO"
  CHL_socialist_party:0 "社会党"
+ CHL_socialist_party_desc:0 "TODO"
  CHL_nationalisation_of_the_mining_industry:0 "鉱業の国有化"
+ CHL_nationalisation_of_the_mining_industry_desc:0 "TODO"
  CHL_use_of_corfo:0 "CORFOの活用"
+ CHL_use_of_corfo_desc:0 "TODO"
  CHL_agricultural_reform:0 "農業改革"
+ CHL_agricultural_reform_desc:0 "TODO"
  CHL_minimum_wage_development:0 "最低賃金の整備"
+ CHL_minimum_wage_development_desc:0 "TODO"
  CHL_agricultural_mechanisation:0 "農業機械化"
+ CHL_agricultural_mechanisation_desc:0 "TODO"
  CHL_highway_construction:0 "高速道路建設"
+ CHL_highway_construction_desc:0 "TODO"
  CHL_urban_development_and_redevelopment:0 "都市開発および再開発"
+ CHL_urban_development_and_redevelopment_desc:0 "TODO"
  CHL_oil_well_exploration:0 "油井の探鉱"
+ CHL_oil_well_exploration_desc:0 "TODO"
  CHL_radical_party:0 "急進党"
+ CHL_radical_party_desc:0 "TODO"
  CHL_expansion_of_womens_suffrage:0 "女性参政権の拡大"
+ CHL_expansion_of_womens_suffrage_desc:0 "TODO"
  CHL_law_for_the_permanent_defence_of_democracy:0 "民主主義の恒久的防衛のための法"
+ CHL_law_for_the_permanent_defence_of_democracy_desc:0 "TODO"
  CHL_construction_of_hydropower_plants:0 "水力発電所の建設"
+ CHL_construction_of_hydropower_plants_desc:0 "TODO"
  CHL_construction_of_steel_mills:0 "製鉄工場の建設"
+ CHL_construction_of_steel_mills_desc:0 "TODO"
  CHL_opening_of_iron_mines:0 "鉄鉱山の開山"
+ CHL_opening_of_iron_mines_desc:0 "TODO"
  CHL_construction_of_a_sugar_processing_plant:0 "砂糖加工工場建設"
+ CHL_construction_of_a_sugar_processing_plant_desc:0 "TODO"
  CHL_launch_of_the_serena_project:0 "セレナ計画の始動"
+ CHL_launch_of_the_serena_project_desc:0 "TODO"
  CHL_establishment_of_enap:0 "ENAPの設立"
+ CHL_establishment_of_enap_desc:0 "TODO"
 
 #国民精神
  CHL_energy_independence_orientation:0 "エネルギー独立志向"
@@ -44,8 +63,7 @@
  CHL.3.d:0 "この法は、共産党登録取り消しを規定しており、過激派は選挙登録簿から消された。さらに、すべての組織、宣伝、および同様の団体は禁止され、生産活動の通常の発展を妨げるすべての集会または行為は制裁対象となった。"
  CHL.3.0:0 "アカどもを政府に入れるな！"
  CHL.4.t:0 "セレナ計画の始動"
- CHL.4.d:0 "サンティアゴに巨大都市を形成し、その人口も増加させる計画は、国家の持つ資本を集中し、高層ビルを含めた公共建設事業を加速させることを念頭に置いていた。事実上すべての機関が中央集権化され、政治、行政等の各問題に対する対処が決定され、芸術や娯楽といった精神的な楽しみさえも独占し、地方からの移民によって偏向的な繁栄を得ている首都の魅力と眩しさは多くのチリ国民に理解されている。
-チリの全州でこの計画を実行することは不可能であるため、各行政機関が1つの州を対象として計画を実行することとなった。この基準が国民生活の間に適用された場合、未来のチリは首都への人工集中に悩まされることはなく、その代わりに州都と各州の繁栄を享受することになるだろう。"
+ CHL.4.d:0 "サンティアゴに巨大都市を形成し、その人口も増加させる計画は、国家の持つ資本を集中し、高層ビルを含めた公共建設事業を加速させることを念頭に置いていた。事実上すべての機関が中央集権化され、政治、行政等の各問題に対する対処が決定され、芸術や娯楽といった精神的な楽しみさえも独占し、地方からの移民によって偏向的な繁栄を得ている首都の魅力と眩しさは多くのチリ国民に理解されている。\nチリの全州でこの計画を実行することは不可能であるため、各行政機関が1つの州を対象として計画を実行することとなった。この基準が国民生活の間に適用された場合、未来のチリは首都への人工集中に悩まされることはなく、その代わりに州都と各州の繁栄を享受することになるだろう。"
  CHL.4.0:0 "一極集中を終わらせろ！"
  CHL.5.t:0 "農地改革"
  CHL.5.d:0 "地主から土地の所有権を農民へ組み入れ、農民の生活レベルを引き上げることで、農業生産性の向上、水道システムの改革、農業関連の公的機関の再編の達成を目標とした。この計画ではこれらの目標に加え、効率的な土地の再分配を行うために農業改革法と農民連合法が制定され、灌漑用に一人あたり最大80ヘクタールの面積を約束した。"
