国家タグ整理

--- a/localisation/japanese/map/geacps_countries_colony_l_japanese.yml
+++ b/localisation/japanese/map/geacps_countries_colony_l_japanese.yml
@@ -1728,6 +1728,10 @@
  
 ##GEACPS追加国家
 #アジア
+ ADN_colony_and_protectorate:0 "$OVERLORDADJ$領$NONIDEOLOGY$植民地及び保護領"
+ ADN_colony_and_protectorate_DEF:0 "$OVERLORDADJ$領$NONIDEOLOGY$植民地及び保護領"
+ ADN_colony_and_protectorate_ADJ:0 "$OVERLORDADJ$領$NONIDEOLOGYADJ$"
+ 
  BHR_protected_territory:0 "$OVERLORDADJ$保護領$NONIDEOLOGY$"
  BHR_protected_territory_DEF:0 "$OVERLORDADJ$保護領$NONIDEOLOGY$"
  BHR_protected_territory_ADJ:0 "$OVERLORDADJ$領$OVERLORDADJ$"
@@ -1808,9 +1812,9 @@
  EIN_colonies_federation:0 "$OVERLORDADJ$領$NONIDEOLOGY$諸島連邦"
  EIN_colonies_federation_DEF:0 "$OVERLORDADJ$領$NONIDEOLOGY$諸島連邦"
  EIN_colonies_federation_ADJ:0 "$OVERLORDADJ$領$NONIDEOLOGYADJ$諸島"
- EIN_imperial_member:0 "$OVERLORDADJ$領東印度諸島連邦"
- EIN_imperial_member_DEF:0 "$OVERLORDADJ$領東印度諸島連邦"
- EIN_imperial_member_ADJ:0 "$OVERLORDADJ$領東印度諸島"
+ EIN_imperial_member:0 "$OVERLORDADJ$領東印度王国"
+ EIN_imperial_member_DEF:0 "$OVERLORDADJ$領東印度王国"
+ EIN_imperial_member_ADJ:0 "$OVERLORDADJ$領東印度"
  EIN_imperial_overseas_territory:0 "$OVERLORDADJ$領東印度諸島"
  EIN_imperial_overseas_territory_DEF:0 "$OVERLORDADJ$領東印度諸島"
  EIN_imperial_overseas_territory_ADJ:0 "$OVERLORDADJ$領東印度諸島"
@@ -2914,16 +2918,6 @@
  
 ##コズメティック
 #アジア
- ADEN_ENG_colony_and_protectorate:0 "$OVERLORDADJ$領アデン植民地及び保護領"
- ADEN_ENG_colony_and_protectorate_DEF:0 "$OVERLORDADJ$領アデン植民地及び保護領"
- ADEN_ENG_colony_and_protectorate_ADJ:0 "$OVERLORDADJ$領アデン"
- ADEN_GBRbyENG_colony_and_protectorate:0 "$OVERLORDADJ$領アデン植民地及び保護領"
- ADEN_GBRbyENG_colony_and_protectorate_DEF:0 "$OVERLORDADJ$領アデン植民地及び保護領"
- ADEN_GBRbyENG_colony_and_protectorate_ADJ:0 "$OVERLORDADJ$領アデン"
- ADEN_GBRandIREbyENG_colony_and_protectorate:0 "$OVERLORDADJ$領アデン植民地及び保護領"
- ADEN_GBRandIREbyENG_colony_and_protectorate_DEF:0 "$OVERLORDADJ$領アデン植民地及び保護領"
- ADEN_GBRandIREbyENG_colony_and_protectorate_ADJ:0 "$OVERLORDADJ$領アデン"
- 
  STRAITS_GBRbyENG_colony:0 "$OVERLORDADJ$領海峡植民地"
  STRAITS_GBRbyENG_colony_DEF:0 "$OVERLORDADJ$領海峡植民地"
  STRAITS_GBRbyENG_colony_ADJ:0 "$OVERLORDADJ$領海峡植民地"
@@ -2934,6 +2928,7 @@
  TRANSJORDAN_hashemite_kingdom_mandated_territory_A:0 "$OVERLORDADJ$委任統治領トランスヨルダン・ハシミテ王国"
  TRANSJORDAN_hashemite_kingdom_mandated_territory_A_DEF:0 "$OVERLORDADJ$委任統治領トランスヨルダン・ハシミテ王国"
  TRANSJORDAN_hashemite_kingdom_mandated_territory_A_ADJ:0 "$OVERLORDADJ$委任統治領トランスヨルダン"
+ 
 #ヨーロッパ
  GALandLOD_kingdom_AUS_empire:0 "ガリツィア及びロドメリア王国及びクラカウ大公国並びにアウシュヴィッツ及びザルト公国"
  GALandLOD_kingdom_AUS_empire_DEF:0 "ガリツィア及びロドメリア王国及びクラカウ大公国並びにアウシュヴィッツ及びザルト公国"
