--- a/localisation/japanese/map/geacps_countries_cosmetic_l_japanese.yml
+++ b/localisation/japanese/map/geacps_countries_cosmetic_l_japanese.yml
@@ -1,10 +1,6 @@
 ﻿l_japanese:
-#国家形成
+##国名
 #アジア
- ADEN:0 "アデン"
- ADEN_DEF:0 "アデン"
- ADEN_ADJ:0 "アデン"
- 
  AINUMOSIR_republic:0 "アイヌモシリ共和国"
  AINUMOSIR_republic_DEF:0 "アイヌモシリ共和国"
  AINUMOSIR_republic_ADJ:0 "アイヌモシリ"
@@ -101,10 +97,6 @@
  KHMER_republic_DEF:0 "クメール共和国"
  KHMER_republic_ADJ:0 "クメール共和国"
  
- MA_warlord:0 "馬軍閥"
- MA_warlord_DEF:0 "馬軍閥"
- MA_warlord_ADJ:0 "馬"
- 
  MAJAPAHIT_empire:0 "マジャパヒト帝国"
  MAJAPAHIT_empire_DEF:0 "マジャパヒト帝国"
  MAJAPAHIT_empire_ADJ:0 "マジャパヒト"
@@ -124,10 +116,6 @@
  MUGHAL_empire:0 "ムガル帝国"
  MUGHAL_empire_DEF:0 "ムガル帝国"
  MUGHAL_empire_ADJ:0 "ムガル"
- 
- MUSCATandOMAN_sultanate:0 "マスカット及びオマーン・スルタン国"
- MUSCATandOMAN_muscat_sultanate_DEF:0 "マスカット及びオマーン・スルタン国"
- MUSCATandOMAN_muscat_sultanate_ADJ:0 "マスカット・オマーン"
  
  MYANMAR_union:0 "ミャンマー連邦"
  MYANMAR_union_DEF:0 "ミャンマー連邦"
@@ -169,30 +157,14 @@
  TRANSCAUCASIAN_democratic_federative_republic_DEF:0 "トランスコーカサス民主連邦共和国"
  TRANSCAUCASIAN_democratic_federative_republic_ADJ:0 "トランスコーカサス"
  
- TURAN_union:0 "ツラン連合"
- TURAN_union_DEF:0 "ツラン連合"
- TURAN_union_ADJ:0 "ツラン"
- 
  YELLOWRUSSIA_republic:0 "黄ロシア共和国"
  YELLOWRUSSIA_republic_DEF:0 "黄ロシア共和国"
  YELLOWRUSSIA_republic_ADJ:0 "黄ロシア"
  
 #ヨーロッパ
- AUS-HUN_monarchy:0 "オーストリア諸邦ならびに神聖なるハンガリーのイシュトヴァーン王冠の諸邦"
- AUS-HUN_monarchy_DEF:0 "オーストリア諸邦ならびに神聖なるハンガリーのイシュトヴァーン王冠の諸邦"
- AUS-HUN_monarchy_ADJ:0 "オーストリア＝ハンガリー"
- 
  BATAVIA_republic:0 "バタビア共和国"
  BATAVIA_republic_DEF:0 "バタビア共和国"
  BATAVIA_republic_ADJ:0 "バタビア"
- 
- BENELUX_united_kingdom:0 "ベネルクス連合王国"
- BENELUX_united_kingdom_DEF:0 "ベネルクス連合王国"
- BENELUX_united_kingdom_ADJ:0 "ベネルクス連合王国"
- 
- BOSandHRZ:0 "ボスニア及びヘルツェゴヴィナ"
- BOSandHRZ_DEF:0 "ボスニア及びヘルツェゴヴィナ"
- BOSandHRZ_ADJ:0 "ボスニア・ヘルツェゴヴィナ"
  
  BOHEMIA_kingdom:0 "ボヘミア王国"
  BOHEMIA_kingdom_DEF:0 "ボヘミア王国"
@@ -205,6 +177,73 @@
  BOHEMIA_socialist_republic:0 "ボヘミア社会主義共和国"
  BOHEMIA_socialist_republic_DEF:0 "ボヘミア社会主義共和国"
  BOHEMIA_socialist_republic_ADJ:0 "ボヘミア"
+ 
+ CARNARO_ITA_regency:0 "カルナーロ・イタリア執政府"
+ CARNARO_ITA_regency_DEF:0 "カルナーロ・イタリア執政府"
+ CARNARO_ITA_regency_ADJ:0 "カルナーロ"
+ 
+ GER-AUS_republic:0 "ドイツ＝オーストリア共和国"
+ GER-AUS_republic_DEF:0 "ドイツ＝オーストリア共和国"
+ GER-AUS_republic_ADJ:0 "ドイツ＝オーストリア"
+ 
+ GRANDA_emirate:0 "グラナダ首長国"
+ GRANDA_emirate_DEF:0 "グラナダ首長国"
+ GRANDA_emirate_ADJ:0 "グラナダ"
+ 
+ GREATGERMANY_state:0 "大ドイツ国"
+ GREATGERMANY_state_DEF:0 "大ドイツ国"
+ GREATGERMANY_state_ADJ:0 "大ドイツ"
+ 
+ HELVETIA_republic:0 "ヘルヴェティア共和国"
+ HELVETIA_republic_DEF:0 "ヘルヴェティア共和国"
+ HELVETIA_republic_ADJ:0 "ヘルヴェティア"
+ 
+ HELLAS_republic:0 "ヘラス共和国"
+ HELLAS_republic_DEF:0 "ヘラス共和国"
+ HELLAS_republic_ADJ:0 "ヘラス"
+ 
+ HELLAS_democratic_republic:0 "ヘラス民主共和国"
+ HELLAS_democratic_republic_DEF:0 "ヘラス民主共和国"
+ HELLAS_democratic_republic_ADJ:0 "ヘラス"
+ 
+ HELLAS_state:0 "ヘラス国"
+ HELLAS_state_DEF:0 "ヘラス国"
+ HELLAS_state_ADJ:0 "ヘラス"
+ 
+ HOLYMOUNTAIN_autonomous_monastic_state:0 "聖なる山自治修道士国"
+ HOLYMOUNTAIN_autonomous_monastic_state_DEF:0 "聖なる山自治修道士国"
+ HOLYMOUNTAIN_autonomous_monastic_state_ADH:0 "聖なる山"
+ 
+ HOLYROMA_empire:0 "神聖ローマ帝国"
+ HOLYROMA_empire_DEF:0 "神聖ローマ帝国"
+ HOLYROMA_empire_ADJ:0 "神聖ローマ"
+ 
+#国家形成
+#アジア
+ MA_warlord:0 "馬軍閥"
+ MA_warlord_DEF:0 "馬軍閥"
+ MA_warlord_ADJ:0 "馬"
+ 
+ MSCandOMA_sultanate:0 "マスカット及びオマーン・スルタン国"
+ MSCandOMA_muscat_sultanate_DEF:0 "マスカット及びオマーン・スルタン国"
+ MSCandOMA_muscat_sultanate_ADJ:0 "マスカット・オマーン"
+ 
+ TURAN_union:0 "ツラン連合"
+ TURAN_union_DEF:0 "ツラン連合"
+ TURAN_union_ADJ:0 "ツラン"
+ 
+#ヨーロッパ
+ AUSandHUN_lands:0 "オーストリア諸邦ならびに神聖なるハンガリーのイシュトヴァーン王冠の諸邦"
+ AUSandHUN_lands_DEF:0 "オーストリア諸邦ならびに神聖なるハンガリーのイシュトヴァーン王冠の諸邦"
+ AUSandHUN_lands_ADJ:0 "オーストリア・ハンガリー"
+ 
+ BENELUX_united_kingdom:0 "ベネルクス連合王国"
+ BENELUX_united_kingdom_DEF:0 "ベネルクス連合王国"
+ BENELUX_united_kingdom_ADJ:0 "ベネルクス連合王国"
+ 
+ BOSandHRZ:0 "ボスニア及びヘルツェゴヴィナ"
+ BOSandHRZ_DEF:0 "ボスニア及びヘルツェゴヴィナ"
+ BOSandHRZ_ADJ:0 "ボスニア・ヘルツェゴヴィナ"
  
  BOHEMIAandMORAVIA:0 "ボヘミア及びモラヴィア"
  BOHEMIAandMORAVIA_DEF:0 "ボヘミア及びモラヴィア"
@@ -222,21 +261,9 @@
  BOHEMIAandMORAVIA_united_kingdom_DEF:0 "ボヘミア及びモラヴィア連合王国"
  BOHEMIAandMORAVIA_united_kingdom_ADJ:0 "ボヘミア・モラヴィア"
  
- CARNARO_ITA_regency:0 "カルナーロ・イタリア執政府"
- CARNARO_ITA_regency_DEF:0 "カルナーロ・イタリア執政府"
- CARNARO_ITA_regency_ADJ:0 "カルナーロ"
- 
  CHE-ING_republic:0 "チェチェン＝イングーシ共和国"
  CHE-ING_republic_DEF:0 "チェチェン＝イングーシ共和国"
  CHE-ING_republic_ADJ:0 "チェチェン＝イングーシ"
- 
- CHECHENICHKERIA_republic:0 "チェチェン・イチケリア共和国"
- CHECHENICHKERIA_republic_DEF:0 "チェチェン・イチケリア共和国"
- CHECHENICHKERIA_republic_ADJ:0 "チェチェン・イチケリア"
- 
- CHURCH_state:0 "教会国"
- CHURCH_state_DEF:0 "教会国"
- CHURCH_state_ADJ:0 "教皇領"
  
  COURLANDandSEMIGALLIA_duchy:0 "クールラント及びゼムガレン公国"
  COURLANDandSEMIGALLIA_duchy_DEF:0 "クールラント及びゼムガレン公国"
@@ -373,42 +400,6 @@
  GBRandFRAbyENG_united_kingdom:0 "グレートブリテン及びフランス連合王国"
  GBRandFRAbyENG_united_kingdom_DEF:0 "グレートブリテン及びフランス連合王国"
  GBRandFRAbyENG_united_kingdom_ADJ:0 "イギリス・フランス"
- 
- GER-AUS_republic:0 "ドイツ＝オーストリア共和国"
- GER-AUS_republic_DEF:0 "ドイツ＝オーストリア共和国"
- GER-AUS_republic_ADJ:0 "ドイツ＝オーストリア"
- 
- GRANDA_emirate:0 "グラナダ首長国"
- GRANDA_emirate_DEF:0 "グラナダ首長国"
- GRANDA_emirate_ADJ:0 "グラナダ"
- 
- GREATGERMANY_state:0 "大ドイツ国"
- GREATGERMANY_state_DEF:0 "大ドイツ国"
- GREATGERMANY_state_ADJ:0 "大ドイツ"
- 
- HELVETIA_republic:0 "ヘルヴェティア共和国"
- HELVETIA_republic_DEF:0 "ヘルヴェティア共和国"
- HELVETIA_republic_ADJ:0 "ヘルヴェティア"
- 
- HELLAS_republic:0 "ヘラス共和国"
- HELLAS_republic_DEF:0 "ヘラス共和国"
- HELLAS_republic_ADJ:0 "ヘラス"
- 
- HELLAS_democratic_republic:0 "ヘラス民主共和国"
- HELLAS_democratic_republic_DEF:0 "ヘラス民主共和国"
- HELLAS_democratic_republic_ADJ:0 "ヘラス"
- 
- HELLAS_state:0 "ヘラス国"
- HELLAS_state_DEF:0 "ヘラス国"
- HELLAS_state_ADJ:0 "ヘラス"
- 
- HOLYMOUNTAIN_autonomous_monastic_state:0 "聖なる山自治修道士国"
- HOLYMOUNTAIN_autonomous_monastic_state_DEF:0 "聖なる山自治修道士国"
- HOLYMOUNTAIN_autonomous_monastic_state_ADH:0 "聖なる山"
- 
- HOLYROMA_empire:0 "神聖ローマ帝国"
- HOLYROMA_empire_DEF:0 "神聖ローマ帝国"
- HOLYROMA_empire_ADJ:0 "神聖ローマ"
  
  IBEbyPOR_united_kingdom:0 "イベリア連合王国"
  IBEbyPOR_united_kingdom_DEF:0 "イベリア連合王国"
