--- a/localisation/japanese/map/geacps_countries_l_japanese.yml
+++ b/localisation/japanese/map/geacps_countries_l_japanese.yml
@@ -177,6 +177,10 @@
  SAU_DEF:0 "サウード"
  SAU_ADJ:0 "サウード"
  
+ SHA:0 "陝西"
+ SHA_DEF:0 "陝西"
+ SHA_ADJ:0 "陝西"
+ 
  SHX:0 "山西"
  SHX_DEF:0 "山西"
  SHX_ADJ:0 "山西"
@@ -240,6 +244,10 @@
  VLA:0 "ウラジオストク"
  VLA_DEF:0 "ウラジオストク"
  VLA_ADJ:0 "ウラジオストク"
+ 
+ XIB:0 "西北"
+ XIB_DEF:0 "西北"
+ XIB_ADJ:0 "西北"
  
  YAM:0 "ヤマリア"
  YAM_DEF:0 "ヤマリア"
@@ -458,10 +466,6 @@
  MEL_DEF:0 "マリ・エル"
  MEL_ADJ:0 "マリ・エル"
  
- MEZ:0 "メッツォジョールノ"
- MEZ_DEF:0 "メッツォジョールノ"
- MEZ_ADJ:0 "メッツォジョールノ"
- 
  MLT:0 "マルタ"
  MLT_DEF:0 "マルタ"
  MLT_ADJ:0 "マルタ"
@@ -502,14 +506,6 @@
  OCC_DEF:0 "オクシタニア"
  OCC_ADJ:0 "オクシタニア"
  
- PAD:0 "パダニア"
- PAD_DEF:0 "パダニア"
- PAD_ADJ:0 "パダニア"
- 
- PIE:0 "ピエモンテ"
- PIE_DEF:0 "ピエモンテ"
- PIE_ADJ:0 "ピエモンテ"
- 
  POL:0 "ポーランド"
  POL_DEF:0 "ポーランド"
  POL_ADJ:0 "ポーランド"
@@ -542,6 +538,10 @@
  SHL_DEF:0 "シュレースヴィヒ"
  SHL_ADJ:0 "シュレースヴィヒ"
  
+ SIC:0 "シチリア"
+ SIC_DEF:0 "シチリア"
+ SIC_ADJ:0 "シチリア"
+ 
  SIL:0 "シレジア"
  SIL_DEF:0 "シレジア"
  SIL_ADJ:0 "シレジア"
@@ -561,6 +561,10 @@
  SPR:0 "スペイン"
  SPR_DEF:0 "スペイン"
  SPR_ADJ:0 "スペイン"
+ 
+ SRD:0 "サルディーニャ"
+ SRD_DEF:0 "サルディーニャ"
+ SRD_ADJ:0 "サルディーニャ"
  
  SWE:0 "スウェーデン"
  SWE_DEF:0 "スウェーデン"
@@ -597,6 +601,10 @@
  VLG:0 "ヴォルガ"
  VLG_DEF:0 "ヴォルガ"
  VLG_ADJ:0 "ヴォルガ"
+ 
+ VNC:0 "ヴェネツィア"
+ VNC_DEF:0 "ヴェネツィア"
+ VNC_ADJ:0 "ヴェネツィア"
  
  WGR:0 "西ドイツ"
  WGR_DEF:0 "西ドイツ"
@@ -976,6 +984,10 @@
  VEN_DEF:0 "ベネズエラ"
  VEN_ADJ:0 "ベネズエラ"
  
+ WIN:0 "西インド"
+ WIN_DEF:0 "西インド"
+ WIN_ADJ:0 "西インド"
+ 
 #大洋州
  AST:0 "オーストラリア"
  AST_DEF:0 "オーストラリア"
@@ -1224,6 +1236,10 @@
  MCA_DEF:0 "澳門"
  MCA_ADJ:0 "澳門"
  
+ MSC:0 "マスカット"
+ MSC_DEF:0 "マスカット"
+ MSC_ADJ:0 "マスカット"
+ 
  MWN:0 "モン"
  MWN_DEF:0 "モン"
  MWN_ADJ:0 "モン"
@@ -1303,10 +1319,6 @@
  SGH:0 "上海"
  SGH_DEF:0 "上海"
  SGH_ADJ:0 "上海"
- 
- SHA:0 "陝西"
- SHA_DEF:0 "陝西"
- SHA_ADJ:0 "陝西"
  
  SHD:0 "山東"
  SHD_DEF:0 "山東"
@@ -1569,6 +1581,10 @@
  MDR_DEF:0 "マドリード"
  MDR_ADJ:0 "マドリード"
  
+ MEZ:0 "メッツォジョールノ"
+ MEZ_DEF:0 "メッツォジョールノ"
+ MEZ_ADJ:0 "メッツォジョールノ"
+ 
  MNN:0 "マン"
  MNN_DEF:0 "マン"
  MNN_ADJ:0 "マン"
@@ -1588,6 +1604,14 @@
  NTL:0 "ネーデルラント"
  NTL_DEF:0 "ネーデルラント"
  NTL_ADJ:0 "ネーデルラント"
+ 
+ PAD:0 "パダニア"
+ PAD_DEF:0 "パダニア"
+ PAD_ADJ:0 "パダニア"
+ 
+ PIE:0 "ピエモンテ"
+ PIE_DEF:0 "ピエモンテ"
+ PIE_ADJ:0 "ピエモンテ"
  
  RHI:0 "ライン"
  RHI_DEF:0 "ライン"
@@ -1617,10 +1641,6 @@
  SIB_DEF:0 "シベリア"
  SIB_ADJ:0 "シベリア"
  
- SIC:0 "シチリア"
- SIC_DEF:0 "シチリア"
- SIC_ADJ:0 "シチリア"
- 
  SLA:0 "スラボニア"
  SLA_DEF:0 "スラボニア"
  SLA_ADJ:0 "スラボニア"
@@ -1633,10 +1653,6 @@
  SMR_DEF:0 "サンマリノ"
  SMR_ADJ:0 "サンマリノ"
  
- SRD:0 "サルディーニャ"
- SRD_DEF:0 "サルディーニャ"
- SRD_ADJ:0 "サルディーニャ"
- 
  TRN:0 "トランスニストリア"
  TRN_DEF:0 "トランスニストリア"
  TRN_ADJ:0 "トランスニストリア"
@@ -1648,10 +1664,6 @@
  VIE:0 "ウィーン"
  VIE_DEF:0 "ウィーン"
  VIE_ADJ:0 "ウィーン"
- 
- VNC:0 "ヴェネツィア"
- VNC_DEF:0 "ヴェネツィア"
- VNC_ADJ:0 "ヴェネツィア"
  
  VOJ:0 "ヴォイヴォディナ"
  VOJ_DEF:0 "ヴォイヴォディナ"
@@ -1950,10 +1962,6 @@
  VIR:0 "ヴァージン"
  VIR_DEF:0 "ヴァージン"
  VIR_ADJ:0 "ヴァージン"
- 
- WIN:0 "西インド"
- WIN_DEF:0 "西インド"
- WIN_ADJ:0 "西インド"
  
  WIW:0 "ウィンドワード"
  WIW_DEF:0 "ウィンドワード"
