ペルーNF効果実装

--- a/localisation/japanese/generic/geacps_ideologies_l_japanese.yml
+++ b/localisation/japanese/generic/geacps_ideologies_l_japanese.yml
@@ -44,6 +44,8 @@
  liberal_democracy_acceptance:0 "自由民主主義者との外交の容認"
  liberal_democracy_ideology:0 "自由民主主義"
  liberal_democracy_ideology_desc:0 ""
+ conservative_liberalism_ideology:0 "保守自由主義"
+ conservative_liberalism_ideology_desc:0 ""
  
 #Conservative Democracy
  conservative_democracy:0 "保守民主主義"
