--- a/localisation/japanese/generic/geacps_parties_l_japanese.yml
+++ b/localisation/japanese/generic/geacps_parties_l_japanese.yml
@@ -3,30 +3,38 @@
  PARTY_illegal_party:0 "§R非合法政党§!"
  PARTY_illegal_party_long:0 "§R非合法政党§!"
  
- PARTY_centre_party_long:0 "中央党"
  PARTY_centre_party:0 "中央党"
- PARTY_communist_party_long:0 "共産党"
+ PARTY_centre_party_long:0 "中央党"
  PARTY_communist_party:0 "共産党"
- PARTY_conservative_party_long:0 "保守党"
+ PARTY_communist_party_long:0 "共産党"
+ PARTY_conservative_coalition:0 "保守連合"
+ PARTY_conservative_coalition_long:0 "保守連合"
  PARTY_conservative_party:0 "保守党"
- PARTY_governor_general_long:0 "総督"
+ PARTY_conservative_party_long:0 "保守党"
  PARTY_governor_general:0 "総督"
- PARTY_independent_politician_long:0 "無所属"
+ PARTY_governor_general_long:0 "総督"
  PARTY_independent_politician:0 "無所属"
- PARTY_labour_party_long:0 "労働党"
+ PARTY_independent_politician_long:0 "無所属"
  PARTY_labour_party:0 "労働党"
- PARTY_liberal_party_long:0 "自由党"
+ PARTY_labour_party_long:0 "労働党"
  PARTY_liberal_party:0 "自由党"
- PARTY_national_democratic_union_long:0 "国民民主連合"
+ PARTY_liberal_party_long:0 "自由党"
+ PARTY_national_democratic_front:0 "国民民主戦線"
+ PARTY_national_democratic_front_long:0 "国民民主戦線"
  PARTY_national_democratic_union:0 "国民民主連合"
+ PARTY_national_democratic_union_long:0 "国民民主連合"
  PARTY_peoples_party:0 "人民党"
  PARTY_peoples_party_long:0 "人民党"
- PARTY_provisional_government_long:0 "臨時政府"
  PARTY_provisional_government:0 "臨時政府"
- PARTY_republican_party_long:0 "共和党"
+ PARTY_provisional_government_long:0 "臨時政府"
  PARTY_republican_party:0 "共和党"
- PARTY_social_democratic_party_long:0 "社会民主党"
+ PARTY_republican_party_long:0 "共和党"
+ PARTY_revolutionary_union:0 "革命連合"
+ PARTY_revolutionary_union_long:0 "革命連合"
+ PARTY_revolutionary_workers_party:0 "革命労働者党"
+ PARTY_revolutionary_workers_party_long:0 "革命労働者党"
  PARTY_social_democratic_party:0 "社会民主党"
+ PARTY_social_democratic_party_long:0 "社会民主党"
  
 ##アジア
 #BHR-バーレーン
@@ -203,10 +211,16 @@
  PARTY_colombian_conservative_party_long:0 "コロンビア保守党"
  PARTY_colombian_liberal_party:0 "自由党"
  PARTY_colombian_liberal_party_long:0 "コロンビア自由党"
+ PARTY_los_leoparades:0 "ロス・レオパレード"
+ PARTY_los_leoparades_long:0 "ロス・レオパレード"
  
 #NFL-ニューファンドランド
  PARTY_newfoundland_government_commission:0 "政府委員会"
  PARTY_newfoundland_government_commission_long:0 "ニューファンドランド政府委員会"
+ 
+#PRU-ペルー
+ PARTY_american_popular_revolutionary_alliance:0 "APRA"
+ PARTY_american_popular_revolutionary_alliance_long:0 "アメリカ革命人民同盟"
  
 ##大洋州
 #AST-オーストラリア
