--- a/localisation/japanese/map/geacps_factions_l_japanese.yml
+++ b/localisation/japanese/map/geacps_factions_l_japanese.yml
@@ -7,8 +7,10 @@
  WESTMINSTER_TREATY_ORGANIZATION:0 "ウェストミンスター条約機構"
  
 #追加陣営
+ ANDEAN_COMMUNITY:0 "アンデス共同体"
  ANTI-JAPANESE_NATIONAL_UNITED_FRONT:0 "抗日民族統一戦線"
  MONROE_LEAGUE:0 "モンロー連盟"
+ NUEVA_ANDALUCA:0 "ヌエバ・アンダルシア"
  
  #COMMONWEALTH_OF_INDEPENDENT_STATES:0 "独立国家共同体"
  #EURASIAN_ECONOMIC_UNION:0 "ユーラシア連合"
