--- a/localisation/japanese/generic/geacps_characters_l_japanese.yml
+++ b/localisation/japanese/generic/geacps_characters_l_japanese.yml
@@ -658,6 +658,13 @@
  CHARACTER_enrique_adolfo_jimenez_brin:0 "エンリケ・アドルフォ・ヒメネス・ブリン"
  CHARACTER_enrique_adolfo_jimenez_brin_desc:0 "パナマ大統領"
  
+#PRU-ペルー
+ CHARACTER_jose_luis_bustamante_y_rivero:0 "ホセ・ルイス・ブスタマンテ・イ・リベロ"
+ CHARACTER_jose_luis_bustamante_y_rivero_desc:0 ""
+ CHARACTER_manuel_a_odria:0 "マヌエル・A・オドリア"
+ CHARACTER_manuel_arturo_odria_amoretti:0 "マヌエル・アルトゥーロ・オドリア・アモレッティ"
+ CHARACTER_manuel_arturo_odria_amoretti_desc:0 ""
+ 
 #USA-アメリカ
  CHARACTER_charles_a_harwood:0 "チャールズ・A・ハーウッド"
  CHARACTER_charles_a_harwood_desc:0 "ヴァージン諸島知事"
