--- a/localisation/japanese/countries_europe/geacps_RUS_l_japanese.yml
+++ b/localisation/japanese/countries_europe/geacps_RUS_l_japanese.yml
@@ -1,65 +1,147 @@
 ﻿l_japanese:
 #国家方針
- RUS_focus_tree:0 "[ROOT.GetName]の国家方針"
- SOV_New_five_years_plan:0 "新五ヵ年計画"
- SOV_New_industrial_plan:0 "新たな産業計画"
- SOV_Expand_urban_functions:0 "都市機能を拡大"
- SOV_Encourage_movement_by_river:0 "河川による移動を奨励"
- SOV_Closed_city_concept:0 "閉鎖都市構想"
- SOV_Follow_Weber:0 "ウェーバーにならえ"
- SOV_Appropriate_infrastructure_investment:0 "適切なインフラ投資"
- SOV_Comprehensive_research_facility_concept:0 "総合研究施設構想"
- SOV_End_plan:0 "計画の終了"
- SOV_Start_of_local_development:0 "地方開発の開始"
- SOV_Development_of_the_Kola:0 "コラの開発"
- SOV_Ural_development:0 "ウラルの開発"
- SOV_Western_redevelopment:0 "西部の再開発"
- SOV_Development_of_the_moscow:0 "モスクワの開発"
- SOV_Development_of_the_Volga_basin:0 "ヴォルガ川流域の開発"
- SOV_Military_production_increase_plan:0 "軍事的増産計画"
- SOV_Martial_law:0 "戒厳令"
- SOV_Stalin's_speech:0 "スターリンの演説"
- SOV_Socialist_propaganda:0 "社会主義プロパガンダ"
- SOV_stability_for_the_time_being:0 "ひとまずの安定"
- Successor:0 "後継者？"
- SOV_Our_general_secretary:0 "我らが書記長"
- Restarting_the_military:0 "軍隊の再始動"
- SOV_Conscription_reform:0 "徴兵改革"
- SOV_Unification_of_communist_ideals:0 "共産理想の統一"
- Cavalry_Modernization:0 "騎兵の近代化"
- SOV_Training_new_officers:0 "新たな将校の育成"
- Specialized_support_squadrons:0 "特化した支援中隊"
- SOV_Update_personal_firearms:0 "個人火器の更新"
- SOV_A_new_goddess_on_the_battlefield:0 "戦場に新しい女神を"
- SOV_Preparing_for_scorched_earth:0 "焦土戦への備え"
- SOV_Investing_in_research_institutes:0 "研究機関への投資"
- Konev_Plan:0 "コーネフ案"
- Focus_on_mechanization:0 "機械化への注力"
- decentralization_of_command:0 "指揮権の分散"
- Comprehensive_tank_operations:0 "戦車の総合運用"
- The_All-Purpose_Tank_Initiative:0 "万能戦車構想"
- Zhukov_Plan:0 "ジューコフ案"
- Principle_of_Center_of_Gravity:0 "重心の原則"
- Overwhelm_by_firepower:0 "火力での圧倒"
- Reorganization_of_the_Air_Force:0 "空軍の再編成"
- Focus_on_long-range_bombing:0 "遠距離爆撃への注力"
- Focus_on_tactical_bombing:0 "戦略爆撃への注力"
- Focus_on_aircraft_production:0 "機体生産への注力"
- Specialization_in_proximity_support:0 "近接支援への注力"
- alliance_between_land_an_air_forces:0 "陸空提携"
- Focus_on_air_superiority:0 "制空への注力"
- night-bombing_regiment:0 "夜間爆撃連隊"
- teacher_training:0 "師官教育"
- Rebuild_the_shipyard:0 "造船所の再整備"
- Development_of_main_armament:0 "主力武装の開発"
- Modernization_of_the_submarine_fleet:0 "潜水艦隊の近代化"
- Cruiser_Development:0 "巡洋艦の開発"
- Reorganize_the_main_fleet:0 "主力艦隊を再編"
- Focus_on_torpedoes:0 "魚雷への注力"
- aircraft_carrier:0 "空母"
- ship-borne_plane:0 "艦載機"
- battleship:0 "戦艦"
- Completed_large_ship:0 "完成された大型艦"
+ RUS_focus_tree:0 "[ROOT.GetName]の国家方針"l_english:
+#国家方針
+ RUS_new_5_year_plan:0 "新五ヵ年計画"
+ RUS_increased_military_production_plan:0 "軍事的増産計画"
+ RUS_unification_of_production_standards:0 "生産規格の統一"
+ RUS_begin_local_development:0 "地方開発の開始"
+ RUS_develop_moscow:0 "モスクワの再開発"
+ RUS_develop_the_volga_river_basin:0 "ヴォルガ流域の開発"
+ RUS_prepare_to_scorch_the_earth:0 "焦土戦への備え"
+ RUS_invest_in_research_institutes:0 "研究機関への投資"
+ RUS_develop_kola:0 "コラの開発"
+ RUS_develop_the_urals:0 "ウラルの開発"
+ RUS_develop_the_west:0 "西部の再開発"
+ RUS_new_industrial_plan:0 "新たな産業計画"
+ RUS_copy_weber:0 "ウェーバーにならえ"
+ RUS_adequate_infrastructure_investment:0 "適切なインフラ投資"
+ RUS_integrated_research_centers_concept:0 "総合研究施設構想"
+ RUS_expand_urban_facilities:0 "都市機能を拡大"
+ RUS_encourage_river_transportation:0 "河川による移動を推奨"
+ RUS_the_closed_city_concept:0 "閉鎖都市構想"
+ RUS_end_of_the_plan:0 "計画の終了"
+ RUS_remobilize_the_military:0 "軍隊の再始動"
+ RUS_rebuild_our_dockyards:0 "造船所の再整備"
+ RUS_modernize_our_submarine_fleet:0 "潜水艦隊の近代化"
+ RUS_torpedo_focus:0 "魚雷への注力"
+ RUS_reorganize_the_main_fleet:0 "主力艦隊を再編"
+ RUS_battleships:0 "戦艦"
+ RUS_completed_large_hulls:0 "完成された大型艦"
+ RUS_aircraft_carriers:0 "航空母艦"
+ RUS_carrierbased_aircrafts:0 "艦載機"
+ RUS_instructor_training:0 "師団教育"
+ RUS_develop_the_main_cannons:0 "主力武装の開発"
+ RUS_cruiser_development:0 "巡洋艦開発"
+ RUS_reorganize_the_airforce:0 "空軍の再編成"
+ RUS_focus_on_tactical_bombing:0 "戦術爆撃への注力"
+ RUS_focus_on_longrange_bombing:0 "遠距離爆撃への注力"
+ RUS_aircraft_production_focus:0 "機体生産への注力"
+ RUS_air_superiority_focus:0 "制空への注力"
+ RUS_night_bombing_squads:0 "夜間爆撃連隊"
+ RUS_focus_on_close_air_support:0 "近接支援への特化"
+ RUS_train_new_officers:0 "新たな将校の育成"
+ RUS_the_zhukov_plan:0 "ジューコフ案"
+ RUS_the_center_of_gravity_principle:0 "重心の原則"
+ RUS_overrun_with_firepower:0 "火力による圧倒"
+ RUS_landair_cooperation:0 "陸空連携"
+ RUS_the_konev_plan:0 "コーネフ案"
+ RUS_mechanization_focus:0 "機械化への注力"
+ RUS_decentralize_command:0 "指揮権の分散"
+ RUS_integrated_tank_operations:0 "戦車の統合運用"
+ RUS_allpurpose_tanks_concept:0 "万能戦車構想"
+ RUS_modernize_the_cavalry:0 "騎兵の近代化"
+ RUS_draft_reform:0 "徴兵改革"
+ RUS_specialized_support_companies:0 "特化した支援中隊"
+ RUS_update_the_infantry_equipment:0 "個人火器の更新"
+ RUS_a_new_goddess_on_the_battlefield:0 "戦場に新たな女神を"
+ RUS_socialist_propaganda:0 "社会主義プロパガンダ"
+ RUS_anti_communist_unity:0 "反共による団結"
+ RUS_martial_law:0 "戒厳令"
+ RUS_temporary_stability:0 "ひとまずの安定"
+ RUS_our_comrade_general_secretary:0 "我らが同志書記長"
+ RUS_antisocialist_manipulation:0 "反社会主義者の捜査"
+ RUS_reconstruction_of_the_nkvd:0 "NKVDの再建"
+ RUS_purge:0 "粛清？"
+ RUS_defence_against_external_enemies:0 "外敵からの防衛を"
+ RUS_the_development_of_stalinism:0 "スターリン主義の展開"
+ RUS_determination_of_the_comintern_thesis:0 "コミンテルン・テーゼの決定"
+ RUS_support_for_socialists_in_various_countries:0 "各国の社会主義者を支援"
+ RUS_comrades_of_europe:0 "ヨーロッパの同志"
+ RUS_comrades_of_china:0 "中華の同志"
+ RUS_set_the_sun_down:0 "太陽を落とせ！"
+ RUS_comrades_of_america:0 "アメリカの同志"
+ RUS_to_the_new_world:0 "新世界へ"
+ RUS_antiimperialist_revolution:0 "反帝国主義革命"
+ RUS_manoeuvres_on_the_transsiberian_railway:0 "シベリア鉄道への工作"
+ RUS_marching_east:0 "東への進軍"
+ RUS_march_into_central_asia:0 "中央アジアへの進軍"
+ RUS_infiltration_into_asia:0 "アジアへの潜入"
+ RUS_to_full_federation:0 "完全な連邦へ"
+ RUS_extension:0 "拡張！"
+ RUS_defence_to_the_west:0 "西への防備"
+ RUS_defeat_the_anticommunists:0 "反共を打ち倒せ！"
+ RUS_successor:0 "後継者？"
+ RUS_comrade_khrushchev:0 "同志フルシチョフ"
+ RUS_route_to_change:0 "改革路線"
+ RUS_comrade_ejov:0 "同志エジョフ"
+ RUS_the_road_to_terror_rule:0 "恐怖統治への道"
+ RUS_comrade_konev:0 "同志コーネフ"
+ RUS_army_by_party:0 "党による軍隊"
+ RUS_stalins_speech:0 "スターリンの演説"
+ RUS_beg_for_support_from_JAP:0 "日本に支援を乞う"
+ RUS_stimulate_nationalism:0 "民族主義を刺激"
+ RUS_military_insiders:0 "軍部の内通者"
+ RUS_entry_of_dissidents:0 "反体制派の入国"
+ RUS_proceed_to_the_kremlin:0 "クレムリンへ進め"
+ RUS_establishment_of_the_extraordinary_parliament:0 "臨時議会を設立"
+ RUS_long_live_the_tsar:0 "ツァーリ万歳"
+ RUS_return_of_successors:0 "後継者の帰還"
+ RUS_introduction_of_oprichnik:0 "オプリーチニキの導入"
+ RUS_new_constitution:0 "新たな憲法"
+ RUS_it_reigns_but_it_does_not_rule:0 "君臨すれども統治せず"
+ RUS_introduction_of_new_nobility:0 "新貴族の導入"
+ RUS_all_power_to_the_tsar:0 "全権力をツァーリへ"
+ RUS_victory_for_the_white_army:0 "白軍の勝利"
+ RUS_release_of_political_prisoners:0 "政治犯の釈放"
+ RUS_declaration_of_the_republic:0 "共和国宣言"
+ RUS_reconstruction_law:0 "復興法"
+ RUS_responding_to_nationalism:0 "民族主義への対応"
+ RUS_free_market:0 "自由市場"
+ RUS_emerging_conglomerate:0 "新興財閥"
+ RUS_complete_growth:0 "完全な成長"
+ RUS_the_new_russian_diplomacy:0 "新たなロシアの外交"
+ RUS_restore_the_western_lost_land:0 "西部失地の回復を！"
+ RUS_reestablishment_of_the_francorussian_consultative_agreement:0 "露仏協商の再締結"
+ RUS_interference_in_the_balkans:0 "バルカンへの干渉"
+ RUS_anticommunist_alliance:0 "反共提携"
+ RUS_improved_relations_with_the_nordic_countries:0 "北欧との関係改善"
+ RUS_defeat_the_remnants:0 "残党を倒せ"
+ RUS_the_european_order_for_us:0 "我々にとっての欧州秩序"
+ RUS_manipulation_to_SCC:0 "南コーカサスへの工作"
+ RUS_restarting_the_southward_policy:0 "南下政策の再始動"
+ RUS_interests_in_the_middle_east:0 "中東における利権"
+ RUS_renegotiations_with_GBR_and_FRA:0 "英仏との再交渉"
+ RUS_response_to_central_asia:0 "中央アジアへの対応"
+ RUS_manipulation_to_MON:0 "モンゴルへの工作？"
+ RUS_demands_on_JAP:0 "日本への要求"
+ RUS_rule_CHI:0 "中華への支配"
+ RUS_resumption_of_the_russojapanese_agreement:0 "日露協約の再開"
+ RUS_asiaeurasia_mutual_alliance:0 "アジア＝ユーラシア相互同盟"
+ RUS_guaranteed_minimum_wage:0 "最低賃金の保証"
+ RUS_compromise_with_rightwing_bolsheviks:0 "右翼ボルシェビキとの妥協"
+ RUS_workers_charter:0 "労働者検証"
+ RUS_fair_election:0 "公正な選挙"
+ RUS_revival_of_the_senate:0 "上院の復活"
+ RUS_allrussian_unity_committee:0 "全ロシア統一協会"
+ RUS_return_of_kerensky:0 "ケレンスキーの帰還"
+ RUS_control_of_the_douma:0 "ドゥーマの制圧"
+ RUS_president_for_life:0 "終身大統領"
+ RUS_rebuilding_the_intelligence_services:0 "諜報機関の再建"
+ RUS_invasion_of_SIB:0 "シベリアへの侵攻"
+ RUS_invasion_of_FEA:0 "極東への侵攻"
+ RUS_development_of_siberia:0 "シベリアの再開発"
+ RUS_the_white_army_is_indestructible:0 "白軍は不滅なり"
 
 #国民精神
  RUS_peoples_commissariat_of_internal_affairs:0 "NKVD"
