ウルグアイNFの実装

--- a/localisation/japanese/generic/geacps_characters_l_japanese.yml
+++ b/localisation/japanese/generic/geacps_characters_l_japanese.yml
@@ -665,6 +665,10 @@
  CHARACTER_manuel_arturo_odria_amoretti:0 "マヌエル・アルトゥーロ・オドリア・アモレッティ"
  CHARACTER_manuel_arturo_odria_amoretti_desc:0 ""
  
+#URG-ウルグアイ
+ CHARACTER_tomas_berreta_gandolfo:0 "トーマス・ベレッタ・ガンドルフォ"
+ CHARACTER_tomas_berreta_gandolfo_desc:0 ""
+ 
 #USA-アメリカ
  CHARACTER_charles_a_harwood:0 "チャールズ・A・ハーウッド"
  CHARACTER_charles_a_harwood_desc:0 "ヴァージン諸島知事"
