--- a/localisation/japanese/generic/geacps_parties_l_japanese.yml
+++ b/localisation/japanese/generic/geacps_parties_l_japanese.yml
@@ -5,6 +5,8 @@
  
  PARTY_centre_party:0 "中央党"
  PARTY_centre_party_long:0 "中央党"
+ PARTY_colorado_party:0 "コロラド党"
+ PARTY_colorado_party_long:0 "コロラド党"
  PARTY_communist_party:0 "共産党"
  PARTY_communist_party_long:0 "共産党"
  PARTY_conservative_coalition:0 "保守連合"
